# speachLTE

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: test.yml
configs/: default.yaml  vocab.json
data/: README.md
docs/: README.md  tooling.md
scripts/: demo_infer.py  download_datasets.py  download_librispeech.py  evaluate_model.py  export_onnx.py  prepare_data.py  train_model.py
src/: __init__.py
src/data/: __init__.py  dataset.py  ingestion.py  preprocessing.py  tokenizer.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  conformer_ctc.py
src/training/: __init__.py  train.py
src/utils/: __init__.py  logging.py
tests/: test_dataset.py  test_metrics.py  test_tokenizer.py  test_training_harness.py
